--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,34 @@
 buildscript {
-    ext.kotlin_version = '1.5.31'
+    ext.kotlin_version = '1.6.10'
 }
 
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
-
-
 group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    google()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt')
     implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt')
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2-native-mt")
+    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0-native-mt')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.2')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 
     implementation('com.squareup.okhttp3:okhttp:4.9.3')
-    implementation('com.google.code.gson:gson:2.8.9')
+    implementation('com.google.code.gson:gson:2.9.0')
     implementation('com.alibaba:fastjson:1.2.79')
     implementation("org.python:jython-slim:2.7.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
 }
 
 test {
