--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.6.20'
 }
 
 plugins {
@@ -18,17 +18,20 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt')
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt')
-    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0-native-mt')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1-native-mt')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1-native-mt')
+    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1-native-mt')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.2')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 
     implementation('com.squareup.okhttp3:okhttp:4.9.3')
     implementation('com.google.code.gson:gson:2.9.0')
-    implementation('com.alibaba:fastjson:1.2.79')
+    implementation('com.alibaba:fastjson:1.2.80')
     implementation("org.python:jython-slim:2.7.2")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.4'
+
 }
 
 test {
