--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.20'
+    ext.kotlin_version = '1.7.10'
 }
 
 plugins {
@@ -18,19 +18,33 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1-native-mt')
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1-native-mt')
-    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1-native-mt')
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.2')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4')
+    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
 
-    implementation('com.squareup.okhttp3:okhttp:4.9.3')
+    implementation('com.squareup.okhttp3:okhttp:4.10.0')
     implementation('com.google.code.gson:gson:2.9.0')
-    implementation('com.alibaba:fastjson:1.2.80')
-    implementation("org.python:jython-slim:2.7.2")
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+    implementation('com.alibaba:fastjson:2.0.10')
+    implementation('org.python:jython-slim:2.7.3b1')
+    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3')
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.4'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+    //https://mvnrepository.com/artifact/net.objecthunter/exp4j
+    //小数精度有问题
+    implementation("net.objecthunter:exp4j:0.4.8")
+
+    //http://www.singularsys.com/jep/download-trial.php
+    //小数精度有问题
+    implementation(files("libs\\jep-java-4.0-trial.jar"))
+
+    // https://mvnrepository.com/artifact/com.mpobjects/bdparsii
+    implementation("com.mpobjects:bdparsii:1.0.0")
+
+    //https://github.com/alibaba/qlExpress
+    implementation('com.alibaba:QLExpress:3.3.0')
 
 }
 
