--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,13 @@ dependencies {
     implementation("com.mpobjects:bdparsii:1.0.0")
 
     //https://github.com/alibaba/qlExpress
-    implementation('com.alibaba:QLExpress:3.3.0')
+    implementation("com.alibaba:QLExpress:3.3.0")
+
+    //https://mvnrepository.com/artifact/net.sourceforge.jeval/jeval
+    implementation("net.sourceforge.jeval:jeval:0.9.4")
+
+    // https://mvnrepository.com/artifact/org.cheffo/jeplite
+    implementation("org.cheffo:jeplite:0.8.7a")
 
 }
 
