--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.7.21'
 }
 
 plugins {
@@ -25,10 +25,14 @@ dependencies {
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
 
     implementation('com.squareup.okhttp3:okhttp:4.10.0')
-    implementation('com.google.code.gson:gson:2.9.0')
-    implementation('com.alibaba:fastjson:2.0.10')
+    implementation('com.squareup.retrofit2:retrofit:2.9.0')
+    implementation('com.squareup.retrofit2:converter-scalars:2.9.0')
+    implementation('com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0')
+
+    implementation('com.google.code.gson:gson:2.10')
+    implementation('com.alibaba:fastjson:2.0.21')
     implementation('org.python:jython-slim:2.7.3b1')
-    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3')
+    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1')
 
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
